--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   font-family: "95font";
   -webkit-font-smoothing: none;
   font-smooth: never;
+  box-sizing: border-box;
 }
 
 body, #root {
